fixed loose element on mobile screen

--- a/src/index.css
+++ b/src/index.css
@@ -155,4 +155,8 @@ button {
     height: 76px;
     font-size: 1.5em;
   }
+  .loose {
+    width: 326px;
+    height: 326px;
+  }
 }
